# Auric

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
Launcher/: CMakeLists.txt  Main.cpp
Launcher/Libraries/Images/: resource.aps  resource.rc
Libraries/Sources/imgui/: imgui_demo.cpp
Source/Private/Core/: Console.cpp  DebugRenderer.cpp  Main.cpp  Program.cpp  Server.cpp
Source/Private/Entity/: NativeEntityManager.cpp
Source/Private/Network/: SocketManager.cpp  UDPSocket.cpp
Source/Private/Render/: Renderer.cpp
Source/Private/Render/Windows/: ClientWindow.cpp  MainWindow.cpp  ServerSettingsWindow.cpp  ServerWindow.cpp
Source/Private/Utilities/: PlatformUtils.cpp
Source/Public/Base/: Log.h  Version.h
Source/Public/Core/: Console.h  DebugRenderer.h  Program.h  Server.h
Source/Public/Entity/: NativeEntityManager.h
Source/Public/Hook/: Func.h
Source/Public/Network/: UDPSocket.h
Source/Public/Render/Windows/: CreditsWindow.h  MainWindow.h  ServerSettingsWindow.h
Source/Public/SDK/: Funcs.h  Levels.h  Modes.h  SDK.h  TypeInfo.h
